// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connectHierarchicalMenu getWidgetState should add an entry equal to the refinement 1`] = `
Object {
  "hierarchicalMenu": Object {
    "category": Array [
      "path",
    ],
  },
}
`;

exports[`connectHierarchicalMenu getWidgetState should not overide other entries in the same namespace 1`] = `
Object {
  "hierarchicalMenu": Object {
    "category": Array [
      "path",
    ],
    "otherCategory": Array [
      "path",
    ],
  },
}
`;
